--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@zooizooi/zooi",
   "version": "0.1.3",
   "description": "Toolkit",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "run": "node main.js"
   },
