♻️ Convert project from CommonJS to ES modules

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@zooizooi/zooi",
   "version": "0.1.7",
   "description": "Toolkit",
+  "type": "module",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
